# somes

./: .env  .gitignore  Cargo.toml  README.md  package-lock.json
deploy-rs/: Cargo.toml
deploy-rs/somes-landing/: 404.html  index.html  kontakt.html  somes-alpha-1-0.html  terms.html  test.html
deploy-rs/somes-landing/css/: clemenss-superb-site.webflow.css
deploy-rs/somes-landing/js/: webflow.js
deploy-rs/src/: main.rs
somes-api/: Cargo.toml  Dockerfile  build.rs  democracy-day-quiz.bash  email_list.txt  spam_login_requests.sh  sql_statements.md
somes-api/build-alpha-0.1/: __data.json  questions.html
somes-api/build-alpha-0.1/_app/: version.json
somes-api/build-alpha-0.1/delegate/: __data.json
somes-api/build-alpha-0.1/home/: __data.json
somes-api/build-alpha-0.1/profile/: __data.json
somes-api/build-alpha-0.1/questions/: __data.json
somes-api/build-alpha-0.1/register/: __data.json
somes-api/build-alpha-0.1/vote/: __data.json
somes-api/db/: somes_schema.sql  somes_test.db14279024529612013159
somes-api/migrations/2023-04-17-045930_user/: down.sql  up.sql
somes-api/somes-landing/: 401.html  cookies.html  index.html  mission.html
somes-api/somes-landing/blog/: die-enstehung-von-somes.html  die-vision-von-somes-ein-artikel.html  politikverdrossenheit-und-fussball.html  sorge-um-die-demokratie-berechtigt.html  uebersicht.html  was-bedeutet-somes-eigentlich.html  wer-steckt-hinter-somes.html
somes-api/somes-landing/transparenz/: ogd.html  transparenz.html
somes-api/src/: cache_updater.rs  composite_types.rs  dataservice.rs  db.rs  error.rs  filter_querying.rs  http_redirect.rs  initial_startup.rs  lib.rs  main.rs  meilisearch.rs  refresh_views.rs  server.rs  time.rs  updater.rs  views.rs
somes-api/src/cache_updater/: update_delegates.rs  update_gov_proposals.rs  update_vote_results.rs
somes-api/src/db/: model.rs  schema.rs
somes-api/src/db/operations/: user.rs
somes-api/src/email/: email_template.html  mod.rs  read_mailbox.rs
somes-api/src/hash/: mod.rs
somes-api/src/jwt/: claims.rs  error.rs  keys.rs  mod.rs
somes-api/src/meilisearch/: update_time.rs
somes-api/src/routes/: dates.rs  decrees.rs  delegates.rs  departments.rs  events.rs  favo.rs  legislative_initiatives.rs  login.rs  mail_send_info.rs  mod.rs  parties.rs  proposals.rs  questions.rs  quiz.rs  reset_password.rs  save_email.rs  signup.rs  statistics.rs  topics.rs  user.rs  verify.rs  vote_results.rs  walo.rs
somes-api/src/routes/decrees/: routes.rs  view.rs
somes-api/src/routes/delegates/: absences.rs  ai_chat.rs  call_to_orders.rs  delegate_political_position.rs  error.rs  general_delegate_info.rs  gov_officials.rs  interests.rs  left_right_topic_score.rs  named_votes.rs  qa.rs  routes.rs  speeches.rs  stance_topic_score.rs
somes-api/src/routes/legislative_initiatives/: bookmark.rs  construct_vote_result.rs  db.rs  error.rs  filtering.rs  json_vote_result.sql
somes-api/src/routes/login/: error.rs
somes-api/src/routes/parties/: error.rs
somes-api/src/routes/proposals/: all_props.rs  by_path.rs  construct_gov_proposal.rs  db.rs  gov_props_by_delegate.rs  gov_props_by_search.rs  routes.rs
somes-api/src/routes/questions/: ask_question.rs  error.rs  questions.rs
somes-api/src/routes/quiz/: add_quiz.rs  quizes.rs
somes-api/src/routes/signup/: action.rs  db.rs  error.rs
somes-api/src/routes/statistics/: absences_per_age.rs  absences_per_delegate.rs  absences_per_gender.rs  absences_per_legis.rs  absences_per_party.rs  absolute_majority_initiatives.rs  activity_per_age.rs  activity_per_delegate.rs  activity_per_gender.rs  activity_per_legis.rs  activity_per_party.rs  age_of_delegates.rs  age_per_gender.rs  age_per_legis.rs  age_per_party.rs  call_to_orders.rs  call_to_orders_by_delegate.rs  call_to_orders_per_age.rs  call_to_orders_per_gender.rs  call_to_orders_per_legis.rs  call_to_orders_per_party.rs  complexity_at_age.rs  complexity_per_gender.rs  complexity_per_legis.rs  complexity_per_party.rs  complexity_per_person.rs  division_accuracy_score_per_age.rs  division_accuracy_score_per_delegate.rs  division_accuracy_score_per_gender.rs  division_accuracy_score_per_legis.rs  division_accuracy_score_per_party.rs  error.rs  filtering.rs  is_left_per_age.rs  is_left_per_delegate.rs  is_left_per_gender.rs  is_left_per_legis.rs  is_left_per_party.rs  is_liberal_per_age.rs  is_liberal_per_delegate.rs  (+14 more)
somes-api/src/routes/user/: error.rs  oauth_provider.rs  routes.rs
somes-api/src/routes/verify/: error.rs
somes-api/src/routes/vote_results/: bookmark.rs  construct_vote_result.rs  db.rs  error.rs  filter.rs  routes.rs
somes-api/src/routes/walo/: error.rs
somes-api/tests/: unlink_keys.rs
somes-common-lib/: Cargo.toml
somes-common-lib/src/: errors.rs  lib.rs  password.rs  routes.rs  structs.rs  time.rs
somes-frontend/: Cargo.toml  package-lock.json  package.json  svelte.config.js  vite.config.ts
somes-frontend/src/: api.rs  app.html  app.rs  error.rs  hooks.client.ts  hooks.server.ts  lib.rs  main.rs
somes-frontend/src/lib/: CircularBuffer.ts  date.ts  goto.ts  interestColors.ts  lightmode.svelte.ts  parliament.ts  partyColor.ts  persisted.svelte.ts  types.ts
somes-frontend/src/lib/api/: api.ts  authed.ts  fetch_delegates.ts
somes-frontend/src/lib/caching/: delegates.svelte.ts  favos.ts  gov_officials.ts  gov_proposals.ts  legis_periods.ts  party_color.ts  seats.ts  user_topics_cache.svelte.ts  vote_results.ts
somes-frontend/src/lib/components/: Pagination.svelte
somes-frontend/src/lib/parliaments/: defaultParliament.ts  mock.ts
somes-frontend/src/lib/stores/: stores.ts
somes-frontend/src/routes/: +layout.svelte  +page.server.ts  +page.svelte  +page.ts  index.css  layout.css  login.rs  mod.rs  types.ts
somes-frontend/src/routes/datenschutz/: +page.svelte
somes-frontend/src/routes/delegates/: +page.server.ts  +page.svelte  +page.ts  searchDelegates.ts
somes-frontend/src/routes/home/: +page.server.ts  +page.svelte
somes-frontend/src/routes/impressum/: +page.svelte
somes-frontend/tests/: test_register_api.rs
(+511 files in other folders)
