[workspace]
members = [
    "somes-api",
    "somes-common-lib",
    "somes-utils/websockets-test"
, "views", "somes-macro"]

[workspace.dependencies]
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-rustls", "postgres", "chrono" ] }
dataservice = { path = "../dataservice/dataservice", default-features=false, features=["models", "utoipa"] }
utoipa = { version = "5", features = ["chrono", "axum_extras"] }
