[package]
name = "deploy-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "^0.7"
clap = { version = "^3", features = ["derive"] }
log = "^0.4"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
tokio = { version = "^1", features = ["full"] }
tower = "^0.4"
tower-http = { version = "^0.5", features = ["full"] }
tracing = "^0.1"
tracing-subscriber = "^0.3"
axum-server = { version = "0.6", features = ["tls-rustls"] }
