[package]
name = "somes-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
somes-common-lib = {path = "../somes-common-lib"}
axum = {version="0.6", features = ["headers", "macros"]}
tower-http = { version = "0.4", features = ["cors"] }
headers = "0.3"
jsonwebtoken = "8.0"
once_cell = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }

#diesel-async = { version = "0.3", features = ["postgres", "bb8"] }
#bb8 = "0.8"
diesel = {version="2.0", features=["postgres"]}
deadpool-diesel = { version = "0.4.1", features = ["postgres"] }

reqwest = { version = "0.11", features = ["json"] } 
dotenv_codegen = "0.15.0"
argon2 = "0.5.0"
rand_core = { version = "0.6", features = ["std"] }
regex = "1"
uuid = {version="1.2.2", features=["v4"]}
sha3 = "0.10"
base16ct = { version = "0.2.0", features = ["std"] }
redis = { version = "0.23", features = ["tokio-comp"] }
log = "0.4.17"
simple_logger = "4.0.0"
common-scrapes = { path = "../../common-scrapes" }
dataservice = { path = "../../dataservice", default-features=false, features=["models"] }
chrono = "0.4.24"
lettre = "0.10.4"
imap = { version = "3.0.0-alpha.10", features = ["rustls-tls"] }
