[package]
name = "somes-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
somes-common-lib = {path = "../somes-common-lib"}
axum = {version="0.8", features = ["macros", "ws"]}
axum-extra ={ version ="0.10", features = ["typed-header"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
headers = "0.4"
jsonwebtoken = "9.0"
once_cell = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tower_governor = { version = "0.7", features = ["axum"]}

#diesel-async = { version = "0.3", features = ["postgres", "bb8"] }
#bb8 = "0.8"
diesel = {version="2.0", features=["postgres"]}
deadpool-diesel = { version = "0.6.0", features = ["postgres"] }

meilisearch-sdk = "0.28"

reqwest = { version = "0.12", features = ["json"] } 
dotenvy_macro = "0.15"
argon2 = "0.5.0"
rand = { version = "0.9" }
rand_core = { version = "0.9", features = ["std"] }
regex = "1"
uuid = {version="1.2.2", features=["v4"]}
sha3 = "0.10"
base16ct = { version = "0.2.0", features = ["std"] }
redis = { version = "0.29", features = ["tokio-comp"] }
log = "0.4.17"
simple_logger = "5.0.0"
common-scrapes = { path = "../../common-scrapes" }
dataservice = { path = "../../dataservice", default-features=false, features=["models", "utoipa"] }
chrono = "0.4.24"
lettre = "0.11"
imap = { version = "3.0.0-alpha.10", features = ["rustls-tls"] }
utoipa = "4.2.0"
utoipa-swagger-ui = { version = "7", features = ["axum"] }
tower = {version = "0.5", features = ["full"] }
# axum-server = { version = "0.7.1", features = ["tls-rustls", "tls-rustls-no-provider"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-rustls", "postgres", "chrono" ] }
futures = "0.3.30"
sha2 = "0.10.8"
pollster = "0.4.0"
fake = "4"
