[package]
name = "somes-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
somes-common-lib = {path = "../somes-common-lib"}
# somes-common-lib = { git = "https://github.com/som-es/somes" }
common-scrapes = { path = "../../common-scrapes" }
# common-scrapes = { git = "https://github.com/som-es/common-scrapes" }
dataservice = { workspace = true }
# dataservice = { git = "https://github.com/som-es/dataservice", default-features=false, features=["models", "utoipa"]  }

axum = {version="0.8", features = ["macros", "ws"]}
axum-extra = { version ="0.12", features = ["typed-header"] }
tower-http = { version = "0.6", features = ["cors", "fs", "compression-full", "decompression-full"] }
headers = "0.4"
jsonwebtoken = "10.3"
once_cell = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tower_governor = { version = "0.8", features = ["axum"]}

meilisearch-sdk = "0.32"

reqwest = { version = "0.13", features = ["json", "blocking"] }
dotenvy_macro = "0.15"
argon2 = "0.5.0"
rand = { version = "0.9" }
rand_core = { version = "0.10" }
regex = "1"
uuid = {version="1.2.2", features=["v4"]}
sha3 = "0.10"
base16ct = { version = "1.0.0", features = ["alloc"] }
redis = { version = "1.0", features = ["tokio-comp"] }
log = "0.4.17"
simple_logger = "5.0.0"
chrono = { workspace = true }
lettre = "0.11"
imap = { version = "3.0.0-alpha.10", features = ["rustls-tls"] }
utoipa = { workspace = true }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
tower = {version = "0.5", features = ["full"] }
sqlx = {workspace=true}
futures = "0.3.30"
sha2 = "0.10.8"
pollster = "0.4.0"
fake = "4"
utoipauto = "0.2.0"
views = { path="../views" }

# axum-server = { version = "0.7.1", features = ["tls-rustls", "tls-rustls-no-provider"] }
axum-server = { version = "0.8", features = ["tls-rustls-no-provider"] }
thiserror = "2.0.17"
serde_qs = "0.15.0"
somes-meilisearch-filter = { workspace = true }
somes-macro = { workspace = true }
dotenvy = "0.15.7"

[build-dependencies]
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-rustls", "postgres", "chrono" ] }
dotenvy_macro = "0.15"
views = { path="../views" }

[dependencies.rustls]
version = "0.23"
features = ["logging", "std", "ring", "tls12"]
default-features = false
