[package]
name = "somes-common-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
dotenv_codegen = "0.15.0"
once_cell = "1.8"
utoipa = "4.2.0"
chrono = {version = "0.4", features = ["serde"]}
serde_json = "1.0"

