[package]
name = "somes-common-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.8"
utoipa = { workspace = true }
chrono = {version = "0.4", features = ["serde"]}
serde_json = "1.0"
common-scrapes = { path = "../../common-scrapes" }
# common-scrapes = { git = "ssh://git@github.com/som-es/common-scrapes" }
somes-macro = { workspace = true }
sqlx = {workspace=true}
somes-meilisearch-filter = { workspace = true }
