[package]
name = "somes-frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
somes-common-lib = {path = "../somes-common-lib"}

serde = "1.0"
wasm-logger = "0.2.0"
yew = "0.20.0"
yew-router = "0.17.0"
reqwest = { version = "0.11", features = ["json"] }