[package]
name = "somes-frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
somes-common-lib = {path = "../somes-common-lib"}

web-sys = { version = "0.3", features = ["Event","EventTarget","InputEvent", "DomTokenList", "Element"] }
serde = "1.0"
wasm-logger = "0.2.0"
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
reqwest = { version = "0.11", features = ["json"] }
lazy_static = "1.4.0"
dotenv_codegen = "0.15.0"
gloo = "0.8.0"
parking_lot = "0.12.1"
log = "0.4.17"
thiserror = "1"
wasm-bindgen-futures = "0.4.34"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }